<resources>
    <string name="app_name">M6P1RCordoba</string>
    <string name="order_number_text">Order Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beverage_text">Beverage</string>
    <string name="send_button_text">Send</string>
    <string name="dessert_text">Dessert</string>
    <string name="main_course_text">Main course</string>
    <string name="table_text">Table</string>
    <string name="waiter_text">Waiter</string>
    <string name="new_order_text">New order</string>
    <string name="beverage_edit_text">Water</string>
    <string name="dessert_edit_text">Ice cream</string>
    <string name="main_dish_text">Fish</string>
    <string name="beverage">Beverage</string>
    <string name="beverage_placeholder">beverage</string>
    <string name="dessert">Dessert</string>
    <string name="dessert_placeholder">dessert</string>
    <string name="main">Main Dish</string>
    <string name="main_dish_placeholder">Main dish</string>
    <string name="order_placeholder">1000</string>
    <string name="table_placeholder">1</string>
    <string name="table">Table</string>
    <string name="show_orders_button">Show orders</string>
    <string name="toast_create_success">Order created successfully</string>
    <string name="toast_create_error">Failed to create order</string>
    <string name="waiter_placeholder_text">waiterPlaceholder</string>
    <string name="toast_check_values">Please check your values</string>
    <string name="main_dish_not_empty">Main dish can not be empty</string>
    <string name="beverage_default">Water (default)</string>
    <string name="dessert_default">N/A</string>
    <string name="order_number">Order number</string>
    <string name="dialog_save_buttonm">Save</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_order_created_success">Order created successfully</string>
    <string name="dialog_error_creating_order">Error creating order</string>
    <string name="dialog_update_button">Update</string>
    <string name="dialog_delete_button">Delete</string>
    <string name="dialog_order_update_success">Order updated successfully</string>
    <string name="dialog_order_update_error">Error deleting game</string>
    <string name="dialog_confirm_delete">Confirm delete</string>
    <string name="dialog_confirm_delete_id">Confirm delete order %1$s?</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_delete_success">Order deleted successfully</string>
    <string name="dialog_delete_error">Error deleting name</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="order">Order</string>
    <string name="order_deleted">Order deleted</string>

    <string-array name="waiters">
        <item>Waldo</item>
        <item>Maria</item>
        <item>Shady</item>
        <item>Kazumi</item>
    </string-array>

    <string-array name="tables">
        <item>Table 1</item>
        <item>Table 2</item>
        <item>Table 3</item>
        <item>Table 4</item>
    </string-array>
</resources>